--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:textColor">@color/main_text</item>
         <item name="android:textSize">@dimen/main_text</item>
         <item name="android:fontFamily">@font/quick_sand_medium</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 
     <style name="MyTextViewBold" parent="Widget.AppCompat.TextView">
@@ -21,5 +22,6 @@
         <item name="android:textColor">@color/main_text</item>
         <item name="android:textSize">@dimen/main_text</item>
         <item name="android:fontFamily">@font/quick_sand_semi_bold</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 </resources>
